# itinerary-generator

./: .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt
api/: mypy.ini  pyproject.toml
api/src/: credentials.py  expose.py  main.py
api/src/database/: connection.py  create.py  methods.py  populate.py  schema.py
api/src/pull/: bus.py  core.py  request.py  train.py
api/src/structs/: bus.py  train.py
assets/: styles.css
examples/: test.yml
src/: colours.py  credentials.py  data.py  input.py  main.py  output.py  request.py  scrapers.py  structs.py
src/bus/: data.py  scrapers.py  structs.py  urls.py
src/database/: create.py  expose.py  populate.py  select.py
src/train/: data.py  scrapers.py  structs.py  urls.py
src/walk/: scraper.py  structs.py  urls.py
templates/: bus.html  index.html  segment.html  stop.html
templates/markers/: alight.html  transition.html
